Start adding styling

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,53 @@
+:root {
+    --ultra-violet: #6458a6ff;
+    --chamoisee: #a57548ff;
+    --lavender-web: #e1e5f2ff;
+    --maize: #ffed66ff;
+    --persian-green: #1b998bff;
+}
+
+header {
+    position: fixed;
+    display: flex;
+    width: 100vw;
+    height: 15vh;
+    top: 0;
+    padding: 20px;
+}
+
+nav {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+#content {
+    width: 100vw;
+    padding: 15vh 20px;
+}
+
 img {
     width: 100px;
+}
+
+#home {
+    width: 70vw;
+    margin: auto;
+}
+
+#home * {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.step {
+    width: 100%;
+    text-align: center;
+}
+
+#footer {
+    
 }
