--- a/src/styles.css
+++ b/src/styles.css
@@ -1,30 +1,43 @@
 :root {
     --ultra-violet: #6458a6ff;
-    --chamoisee: #a57548ff;
+    --chocolate-cosmos: #3d0814;
     --lavender-web: #e1e5f2ff;
-    --maize: #ffed66ff;
-    --persian-green: #1b998bff;
+    --skobeloff: #0b7a75;
+    --fawn: #ffb86f;
 }
 
 header {
-    position: fixed;
-    display: flex;
+    position: sticky;
+    display: grid;
+    justify-content: center;
     width: 100vw;
-    height: 15vh;
     top: 0;
-    padding: 20px;
+    padding: 10px;
+    background-color: var(--ultra-violet);
+}
+
+#logo {
+    color: var(--fawn);
+    font-weight: bold;
+    font-size: 2rem;
 }
 
 nav {
-    height: 100%;
-    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
+}
+button {
+    border-radius: 5px;
+    padding: 1px 7px;
+    background-color: var(--chocolate-cosmos);
+    color: var(--fawn);
+    border: none;
 }
 
 #content {
     width: 100vw;
-    padding: 15vh 20px;
+    padding: 20px;
+    background-color: var(--lavender-web);
 }
 
 img {
@@ -53,4 +66,6 @@ img {
     justify-content: space-between;
     width: 100vw;
     padding: 2vh 20px;
+    background-color: var(--ultra-violet);
+    color: var(--fawn);
 }
