--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 :root {
     --ultra-violet: #6458a6ff;
+    --light-ultra-violet: rgb(198, 194, 219);
     --chocolate-cosmos: #3d0814;
     --lavender-web: #e1e5f2ff;
     --skobeloff: #0b7a75;
     --fawn: #ffb86f;
+    --light-fawn: #fde3c9;
 }
 
 header {
@@ -30,13 +32,13 @@ button {
     border-radius: 5px;
     padding: 1px 7px;
     background-color: var(--chocolate-cosmos);
-    color: var(--fawn);
+    color: var(--light-fawn);
     border: none;
 }
 
 #content {
     width: 100vw;
-    padding: 20px;
+    padding: 25px;
     background-color: var(--lavender-web);
 }
 
@@ -68,4 +70,57 @@ img {
     padding: 2vh 20px;
     background-color: var(--ultra-violet);
     color: var(--fawn);
+}
+
+#menu-page {
+    display: grid;
+}
+
+#menu-title {
+    text-align: center;
+}
+
+#pancakes, #omelettes, #skillets, #more {
+    border-radius: 20px;
+    padding: 15px;
+    margin: 3px 0;
+}
+
+#pancakes, #skillets {
+    background-color: var(--light-fawn);
+    border: 2px solid var(--fawn);
+}
+
+#pancakes {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 5fr 1fr 5fr 1fr 10fr;
+    gap: 20px;
+}
+
+#pancakes h3 {
+    grid-column: span 5;
+    text-align: center;
+}
+
+.arrow-div {
+    padding: 30px 0;
+}
+
+#outsides ul, #omelettes ul, #skillets ul {
+    column-count: 2;
+}
+
+#omelettes, #more {
+    background-color: var(--light-ultra-violet);
+    border: 2px solid var(--ultra-violet);
+}
+
+#skillets {
+    background-color: var(--light-fawn);
+}
+
+#more {
+    display: grid;
+    grid-auto-flow: column;
 }
