--- a/src/styles.css
+++ b/src/styles.css
@@ -30,7 +30,8 @@ header {
 #logo {
     color: var(--fawn);
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 2.5rem;
+    letter-spacing: 0.20rem;
 }
 
 nav {
@@ -54,6 +55,10 @@ button {
     background-color: var(--lavender-web);
 }
 
+.note {
+    font-size: 0.8rem;
+}
+
 img {
     width: 100px;
 }
@@ -68,6 +73,21 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 5px 0;
+}
+
+h1 {
+    font-size: 2.25rem;
+}
+
+h2 {
+    font-size: 2rem;
+}
+
+li {
+    display: inline-block;
+    width: 100%;
+    margin: 4px;
 }
 
 .step {
@@ -80,13 +100,15 @@ img {
     display: flex;
     justify-content: space-between;
     width: 100vw;
-    padding: 2vh 20px;
+    padding: 2vh 30px;
     background-color: var(--ultra-violet);
     color: var(--fawn);
 }
 
 #menu-page {
     display: grid;
+    grid-template-columns: minmax(min-content, 1000px);
+    justify-content: center;
 }
 
 #menu-title {
@@ -124,9 +146,22 @@ img {
     column-count: 2;
 }
 
+#outsides > *, #insides > *, #batters > * {
+    margin-bottom: 5px;
+}
+
 #omelettes, #more {
     background-color: var(--light-ultra-violet);
     border: 2px solid var(--ultra-violet);
+}
+
+#syrups {
+    background-color: var(--fawn);
+    border-radius: 5px;
+    padding: 5px;
+    width: 40%;
+    font-size: 0.9rem;
+    min-width: 200px;
 }
 
 #skillets {
